@@ -1,4 +1,4 @@
-# RCSid: $Id: Rmakefile,v 2.91 2019/07/19 22:25:03 greg Exp $
+# RCSid: $Id: Rmakefile,v 2.92 2019/07/26 00:34:07 greg Exp $
 #
 # Radiance makefile for utility programs
 #
@@ -33,7 +33,7 @@ all:	$(PROGS)
 install:	all $(SPECIAL) objview.pl objpict.pl glare.csh dayfact.csh \
 rlux.csh raddepend.csh trad.wsh objline.csh compamb.csh vinfo.csh \
 ltview.pl ltpict.pl genambpos.pl fieldcomb.csh genklemsamp.pl \
-genskyvec.pl genBSDF.pl bsdfview.pl rtpict.pl $(LIBFILES)
+genskyvec.pl genBSDF.pl bsdfview.pl rtpict.pl rcode2bmp.pl $(LIBFILES)
 	cp $(PROGS) $(INSTDIR)
 	cp objview.pl $(INSTDIR)/objview
 	cp objline.csh $(INSTDIR)/objline
@@ -54,6 +54,7 @@ genskyvec.pl genBSDF.pl bsdfview.pl rtpict.pl $(LIBFILES)
 	cp ltview.pl $(INSTDIR)/ltview
 	cp ltpict.pl $(INSTDIR)/ltpict
 	cp rtpict.pl $(INSTDIR)/rtpict
+	cp rcode2bmp.pl $(INSTDIR)/rcode2bmp
 	cd $(INSTDIR) ; chmod 755 objview objpict \
 		glare dayfact debugcal rlux raddepend objline \
 		compamb vinfo genambpos fieldcomb genklemsamp \
